kubecost-prometheus-server/node-exporter-service.yaml
# Source: cost-analyzer/charts/prometheus/templates/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    component: "node-exporter"
    app: prometheus
    release: kubecost
    chart: prometheus-11.0.2
    heritage: Helm
  name: kubecost-prometheus-node-exporter
  namespace: kubecost
spec:
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    component: "node-exporter"
    app: prometheus
    release: kubecost
    chart: prometheus-11.0.2
    heritage: Helm
  type: "ClusterIP"
