kubecost-prometheus-server/service.yaml
# Source: cost-analyzer/charts/prometheus/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: "server"
    app: prometheus
    release: kubecost
    chart: prometheus-11.0.2
    heritage: Helm
  name: kubecost-prometheus-server
  namespace: kubecost
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    component: "server"
    app: prometheus
    release: kubecost
  sessionAffinity: None
  type: "ClusterIP"
